# rpa-udskrivning-fritvalg

./: .gitignore  @AutomationLog.txt  README.md  conftest.py  main.py  pyproject.toml
GPUCache/: data_0  data_1  index
processes/: application_handler.py  queue_handler.py
src/core/: application_handler.py  automation_runner.py  dashboard_data_handler.py  error_handling.py  patient_context.py  process_item.py  queue_handler.py  screenshot.py  step_configs.py
src/helpers/: ats_functions.py  clean_up.py  config.py  cpr_utils.py
src/steps/: __init__.py  create_administrative_note.py  create_booking_reminders.py  create_discharge_document.py  create_medical_record.py  get_romexis_images.py  initialization_checks.py  prepare_edi_documents.py  process_event.py  send_discharge_document.py  send_via_edi_portal.py  solteq_open_patient_journal.py  solteq_start_app.py  store_edi_receipt.py  update_patient_info.py  update_private_clinic.py
src/steps/edi/: edi_portal_functions.py  edi_portal_handler.py
src/steps/romexis/: image_handler.py  zip_handler.py
tests/: conftest.py  test_automation_runner.py  test_error_handling.py  test_integration_initialization.py  test_integration_solteq.py  test_integration_update_patient_info.py  test_patient_lookup.py  test_solteq_startup.py
