[project]
name = "process-template"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "aak-mbu-integration-romexis @ git+https://github.com/AAK-MBU/aak-mbu-integration-romexis.git@f7faa44",
    "mbu-solteqtand-shared-components",
    "mbu-rpa-core>=0.2.5",
    "mbu-process-dashboard-shared-components==1.5.0",
    "pillow",
    "ruff",
    "tzdata",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py313"
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
  "uv.lock",
  ".env",
]

[tool.ruff.lint]
ignore = ["E501", "E251", "PLC0415"]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "TC",
  "ARG",
  "DTZ",
  "SIM",
  "PL",
]

[tool.ruff.lint.isort]

[tool.ruff.format]

[tool.pyright]
include = ["."]
exclude = [
  "venv",
  ".venv",
  "build",
  "dist",
  "__pycache__"
]
pythonVersion = "3.13"
typeCheckingMode = "basic"

reportCallIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"

reportMissingTypeStubs = true

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "uiautomation",
  "python-dotenv",
  "psutil",
  "docx2pdf",
  "pytest-timeout",
  "rawpy",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires Solteq Tand application and credentials (deselected by default)",
]
addopts = "-m 'not integration'"
faulthandler_timeout = 0