[project]
name = "rpa-udskrivning-fritvalg"
version = "1.1.0"
description = "Udskrivning - Frit valg"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "aak-mbu-integration-romexis @ git+https://github.com/AAK-MBU/aak-mbu-integration-romexis.git@main",
    "mbu-solteqtand-shared-components[application] @ git+https://github.com/AAK-MBU/MBU_SolteqTand_Shared_Components.git@main",
    "mbu-rpa-core @ git+https://github.com/AAK-MBU/MBU-rpa-core.git@main",
    "mbu-process-dashboard-shared-components @ git+https://github.com/AAK-MBU/MBU_Process_Dashboard_Shared_Components.git@main",
    "pillow",
    "rawpy",
    "ruff",
    "tzdata",
    "uiautomation",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py313"
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
  "uv.lock",
  ".env",
]

[tool.ruff.lint]
ignore = ["E501", "E251", "PLC0415"]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "B",
  "C4",
  "TC",
  "ARG",
  "DTZ",
  "SIM",
  "PL",
]

[tool.ruff.lint.isort]

[tool.ruff.format]

[tool.pyright]
include = ["."]
exclude = [
  "venv",
  ".venv",
  "build",
  "dist",
  "__pycache__"
]
pythonVersion = "3.13"
typeCheckingMode = "basic"

reportCallIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"

reportMissingTypeStubs = true

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "uiautomation",
  "python-dotenv",
  "psutil",
  "docx2pdf",
  "pytest-timeout",
  "rawpy",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires Solteq Tand application and credentials (deselected by default)",
]
addopts = "-m 'not integration'"
faulthandler_timeout = 0